# floatx4-rs

./: Cargo.toml  README.md
src/: array.rs  lib.rs  simd.rs
