[package]
name = "floatx4"
version = "1.0.1"
edition = "2021"
authors = ["YaolinQing <d161442079@163.com>"]
license = "Apache-2.0"
keywords = ["gamedev", "math"]
description = "A library that can perform 4 float operations simultaneously."
readme = "README.md"
repository = "https://github.com/yIllusionSky/floatx4-rs"
homepage = "https://github.com/yIllusionSky/floatx4-rs"

[dependencies]
approximately = "1.1.0"

[features]
default = []
f64 = []
simd = ["approximately/simd"]
